--- a/less/utilities.less
+++ b/less/utilities.less
@@ -6,10 +6,11 @@
   float: right;
 }
 
-.posmid {
-	float: right;
+.pull-right-center {
+
+  float: right;
   position: relative;
-  top: 50%;
+  top: 15px;
 
 }
 .pull-left {
